# NumericalCFD

./: .gitignore  Aersp423 Hw 1 .ipynb  MRT_DNS2.m  Manifest.toml  NACA0012.jl  README.md  aersp423hw2.jl  criticalflow_laval.jl  incompressible_flow.m  incompressible_flow.py  laplace_solver.py  laplaceeq.jl  laval_nozzle.py  supersonicwavedrag.jl
.ipynb_checkpoints/: Aersp423 Hw 1 -checkpoint.ipynb
ode_integration/include/: eulerCauchy.h  improvedEulerCauchy.h  rungeKutta4.h
ode_integration/source/: eulerCauchy.cpp  improvedEulerCauchy.cpp  main.cpp  rungeKutta4.cpp
supersonic_wave_drag/: CMakeLists.txt  build.sh
supersonic_wave_drag/include/: solver.h
supersonic_wave_drag/source/: main.cpp  solver.cpp
